syntax = "proto3";

option csharp_namespace = "GrpcCustomerService";

service Customer {
  rpc GetCustomer (CustomerRequest) returns (CustomerResponse);
}

message CustomerRequest {
  int32 customerId = 1;
}

message CustomerResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}